# code-autoeval

./: .gitignore  README.md  pyproject.toml
code_autoeval/clients/llm_model/: llm_model.py
code_autoeval/llm_model/: llm_model.py  llm_model_client.py
code_autoeval/llm_model/imports/: __init__.py  dynamically_import_packages.py  extract_imports_from_file.py  find_imports_from_dir.py  global_imports.py  run_flake8_fix_imports.py
code_autoeval/llm_model/utils/: base_llm_class.py  execute_generated_code.py  execute_unit_tests.py  file_path_functions.py  generate_fake_data.py  preprocess_code_before_exec.py  preprocess_code_before_execution.py  system_prompts.py
code_autoeval/model/: backend_model_kwargs.py
generated_code/fixtures/fixtures/: basellmclass_fixture.py  basemodelconfig_fixture.py  commonattributes_fixture.py  commonloggingstatements_fixture.py  dynamicallyimportpackages_fixture.py  dynamicexampleprompt_fixture.py  executegeneratedcode_fixture.py  executeunittests_fixture.py  extractcontextfromexception_fixture.py  extractimportsfromfile_fixture.py  findparentclass_fixture.py  functionargumentfinder_fixture.py  generatefakedata_fixture.py  globalimports_fixture.py  initkwargs_fixture.py  llmmodel_fixture.py  llmmodelattributes_fixture.py  llmmodelclient_fixture.py  loggingfuncs_fixture.py  loggingstatements_fixture.py  parseunittestcoverage_fixture.py  preprocesscodebeforeexec_fixture.py  preprocesscodebeforeexecution_fixture.py  runflake8fiximports_fixture.py  runpyflakesisort_fixture.py  serializedataframes_fixture.py  streamresponse_fixture.py  systemprompts_fixture.py  validateregexes_fixture.py
generated_code/fixtures/tests/: test_basellmclass_fixture.py  test_basemodelconfig_fixture.py  test_commonattributes_fixture.py  test_commonloggingstatements_fixture.py  test_dynamicallyimportpackages_fixture.py  test_dynamicexampleprompt_fixture.py  (+23 more)
generated_code/workbooks/: remove_outliers.py
workbooks/: create_model_from_hf.py  example.py  parsing_fixtures.py  test_file.py  w_cci_start.py
workbooks/generated_code/: remove_duplicates.py  remove_outliers.py
(+305 files in other folders)
