[tool.poetry]
name = "code-autoeval"
version = "0.1.0"
description = "Package for interacting with backend LLM to execute Python code and auto-iterate"
authors = ["Ed Powers <ed.a.powers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
requests = "^2.32.3"
black = "^24.4.2"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
faker = "^25.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
jupyter = "^1.0.0"
mypy = "^1.10.0"
nest-asyncio = "^1.6.0"
flake8 = "^7.1.0"
ipykernel = "^6.29.4"
pytest = "^8.2.2"
ruff = "^0.4.10"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.analysis.dependencies]
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
